<resources>
    <string name="app_name">EletricCarAppDioXML</string>
    <string name="Tittle">Eletric Car!</string>
    <string name="preco">Preço</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="nameTextView">name</string>
    <string name="_23_min">23 min</string>
    <string name="potencia">Potencia</string>
    <string name="_300_cv">300 Cv</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="close">close</string>
    <string name="favoritos">Favoritos</string>
</resources>