<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/TittlePGCalcular"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClose" />

    <EditText
        android:id="@+id/editTextPreco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameTextView"
        android:inputType="number"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TittlePGCalcular" />

    <EditText
        android:id="@+id/km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/km_percorrido"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPreco" />


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="@id/km_percorrido"
        app:layout_constraintStart_toStartOf="@id/km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/km_percorrido" />


    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24"
        android:contentDescription="@string/close" />


</androidx.constraintlayout.widget.ConstraintLayout>